Implements connection Java-Matlab-Omnet